--- a/index.html
+++ b/index.html
@@ -1,296 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAGIC TRADING</title>
-    <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body>
-    <div id="root">Loading...</div>
-    <script type="text/babel">
-        function LicenseManager() {
-            const [licenses, setLicenses] = React.useState([]);
-            const [newLicense, setNewLicense] = React.useState({
-                key: '',
-                days: 0,
-                hours: 0,
-                subscription_type: '1 Week',
-                support_name: '',
-                key_type: 'restricted',
-                multi_device: false
-            });
-            const [resetKey, setResetKey] = React.useState('');
-            const [error, setError] = React.useState(null);
-
-            React.useEffect(() => {
-                fetchLicenses();
-            }, []);
-
-            const fetchLicenses = async () => {
-                try {
-                    const response = await fetch('/api/licenses');
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    const data = await response.json();
-                    setLicenses(data);
-                } catch (e) {
-                    console.error("Fetching licenses failed:", e);
-                    setError("Failed to fetch licenses. Please check the console for more details.");
-                }
-            };
-
-            const handleAddLicense = async (e) => {
-                e.preventDefault();
-                try {
-                    const response = await fetch('/api/add_license', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(newLicense)
-                    });
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    await fetchLicenses();
-                    setNewLicense({
-                        key: '',
-                        days: 0,
-                        hours: 0,
-                        subscription_type: '1 Week',
-                        support_name: '',
-                        key_type: 'restricted',
-                        multi_device: false
-                    });
-                } catch (e) {
-                    console.error("Adding license failed:", e);
-                    setError("Failed to add license. Please check the console for more details.");
-                }
-            };
-
-            const handleToggleActive = async (id) => {
-                try {
-                    const response = await fetch(`/api/toggle_active/${id}`, { method: 'POST' });
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    await fetchLicenses();
-                } catch (e) {
-                    console.error("Toggling license failed:", e);
-                    setError("Failed to toggle license. Please check the console for more details.");
-                }
-            };
-
-            const handleDeleteLicense = async (id) => {
-                if (confirm('Are you sure you want to delete this license?')) {
-                    try {
-                        const response = await fetch(`/api/delete_license/${id}`, { method: 'DELETE' });
-                        if (!response.ok) {
-                            throw new Error(`HTTP error! status: ${response.status}`);
-                        }
-                        await fetchLicenses();
-                    } catch (e) {
-                        console.error("Deleting license failed:", e);
-                        setError("Failed to delete license. Please check the console for more details.");
-                    }
-                }
-            };
-
-            const handleResetKey = async (e) => {
-                e.preventDefault();
-                try {
-                    const response = await fetch('/api/reset_key', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ key: resetKey })
-                    });
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    await fetchLicenses();
-                    setResetKey('');
-                } catch (e) {
-                    console.error("Resetting key failed:", e);
-                    setError("Failed to reset key. Please check the console for more details.");
-                }
-            };
-
-            if (error) {
-                return <div className="text-red-500 text-center mt-8 text-xl">{error}</div>;
-            }
-
-            return (
-                <div className="container mx-auto p-4">
-                    <h1 className="text-4xl font-bold text-center text-red-600 mb-8">MAGIC TRADING</h1>
-
-                    <table className="min-w-full bg-white border border-gray-300">
-                        <thead>
-                            <tr>
-                                <th className="py-2 px-4 border-b">ID</th>
-                                <th className="py-2 px-4 border-b">Key</th>
-                                <th className="py-2 px-4 border-b">Active</th>
-                                <th className="py-2 px-4 border-b">Expiration Date</th>
-                                <th className="py-2 px-4 border-b">Subscription Type</th>
-                                <th className="py-2 px-4 border-b">Support Name</th>
-                                <th className="py-2 px-4 border-b">Device ID</th>
-                                <th className="py-2 px-4 border-b">Activated</th>
-                                <th className="py-2 px-4 border-b">Key Type</th>
-                                <th className="py-2 px-4 border-b">Multi-Device</th>
-                                <th className="py-2 px-4 border-b">Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {licenses.map((license) => (
-                                <tr key={license.id}>
-                                    <td className="py-2 px-4 border-b">{license.id}</td>
-                                    <td className="py-2 px-4 border-b">{license.key}</td>
-                                    <td className="py-2 px-4 border-b">{license.active ? 'Yes' : 'No'}</td>
-                                    <td className="py-2 px-4 border-b">{new Date(license.expiration_date).toLocaleDateString()}</td>
-                                    <td className="py-2 px-4 border-b">{license.subscription_type}</td>
-                                    <td className="py-2 px-4 border-b">{license.support_name || 'N/A'}</td>
-                                    <td className="py-2 px-4 border-b">{license.device_id || 'N/A'}</td>
-                                    <td className="py-2 px-4 border-b">{license.activated ? 'Yes' : 'No'}</td>
-                                    <td className="py-2 px-4 border-b">{license.key_type}</td>
-                                    <td className="py-2 px-4 border-b">{license.multi_device ? 'Yes' : 'No'}</td>
-                                    <td className="py-2 px-4 border-b">
-                                        <button onClick={() => handleToggleActive(license.id)} className="bg-blue-500 text-white px-2 py-1 rounded mr-2">
-                                            {license.active ? 'Deactivate' : 'Activate'}
-                                        </button>
-                                        <button onClick={() => handleDeleteLicense(license.id)} className="bg-red-500 text-white px-2 py-1 rounded">
-                                            Delete
-                                        </button>
-                                    </td>
-                                </tr>
-                            ))}
-                        </tbody>
-                    </table>
-
-                    <div className="mt-8">
-                        <h2 className="text-2xl font-semibold mb-4">Add New Key</h2>
-                        <form onSubmit={handleAddLicense} className="space-y-4">
-                            <div>
-                                <label htmlFor="key" className="block mb-1">Key</label>
-                                <input
-                                    id="key"
-                                    value={newLicense.key}
-                                    onChange={(e) => setNewLicense({ ...newLicense, key: e.target.value })}
-                                    required
-                                    className="w-full px-3 py-2 border rounded"
-                                />
-                            </div>
-                            <div>
-                                <label htmlFor="days" className="block mb-1">Duration (Days)</label>
-                                <input
-                                    id="days"
-                                    type="number"
-                                    value={newLicense.days}
-                                    onChange={(e) => setNewLicense({ ...newLicense, days: parseInt(e.target.value) })}
-                                    min="0"
-                                    className="w-full px-3 py-2 border rounded"
-                                />
-                            </div>
-                            <div>
-                                <label htmlFor="hours" className="block mb-1">Duration (Hours)</label>
-                                <input
-                                    id="hours"
-                                    type="number"
-                                    value={newLicense.hours}
-                                    onChange={(e) => setNewLicense({ ...newLicense, hours: parseInt(e.target.value) })}
-                                    min="0"
-                                    className="w-full px-3 py-2 border rounded"
-                                />
-                            </div>
-                            <div>
-                                <label htmlFor="subscription_type" className="block mb-1">Subscription Type</label>
-                                <select
-                                    id="subscription_type"
-                                    value={newLicense.subscription_type}
-                                    onChange={(e) => setNewLicense({ ...newLicense, subscription_type: e.target.value })}
-                                    className="w-full px-3 py-2 border rounded"
-                                >
-                                    <option value="1 Week">1 Week</option>
-                                    <option value="1 Month">1 Month</option>
-                                    <option value="3 Months">3 Months</option>
-                                    <option value="6 Months">6 Months</option>
-                                    <option value="1 Year">1 Year</option>
-                                    <option value="Free Trial">Free Trial</option>
-                                    <option value="Hours">Hours</option>
-                                    <option value="Days">Days</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label htmlFor="support_name" className="block mb-1">Support Name (optional)</label>
-                                <input
-                                    id="support_name"
-                                    value={newLicense.support_name}
-                                    onChange={(e) => setNewLicense({ ...newLicense, support_name: e.target.value })}
-                                    className="w-full px-3 py-2 border rounded"
-                                />
-                            </div>
-                            <div>
-                                <label htmlFor="key_type" className="block mb-1">Key Type</label>
-                                <select
-                                    id="key_type"
-                                    value={newLicense.key_type}
-                                    onChange={(e) => setNewLicense({ ...newLicense, key_type: e.target.value })}
-                                    className="w-full px-3 py-2 border rounded"
-                                >
-                                    <option value="restricted">Restricted</option>
-                                    <option value="unrestricted">Unrestricted</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label htmlFor="multi_device" className="block mb-1">
-                                    <input
-                                        type="checkbox"
-                                        id="multi_device"
-                                        checked={newLicense.multi_device}
-                                        onChange={(e) => setNewLicense({ ...newLicense, multi_device: e.target.checked })}
-                                        className="mr-2"
-                                    />
-                                    Multi-Device Key
-                                </label>
-                            </div>
-                            <button type="submit" className="bg-green-500 text-white px-4 py-2 rounded">Add Key</button>
-                        </form>
-                    </div>
-
-                    <div className="mt-8">
-                        <h2 className="text-2xl font-semibold mb-4">Reset Key</h2>
-                        <form onSubmit={handleResetKey} className="space-y-4">
-                            <div>
-                                <label htmlFor="reset_key" className="block mb-1">Key</label>
-                                <input
-                                    id="reset_key"
-                                    value={resetKey}
-                                    onChange={(e) => setResetKey(e.target.value)}
-                                    required
-                                    className="w-full px-3 py-2 border rounded"
-                                />
-                            </div>
-                            <button type="submit" className="bg-yellow-500 text-white px-4 py-2 rounded">Reset Key</button>
-                        </form>
-                    </div>
-
-                    <footer className="mt-16 text-center text-gray-500">
-                        <hr className="my-8" />
-                        <p className="font-bold"># MAGIC TRADING #</p>
-                        <p>LETS LIFE SURPRISE YOU</p>
-                        <p>--------------------------------------------</p>
-                    </footer>
-                </div>
-            );
-        }
-
-        ReactDOM.render(
-            <React.StrictMode>
-                <LicenseManager />
-            </React.StrictMode>,
-            document.getElementById('root')
-        );
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>License Manager</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
